--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,6 +13,9 @@ jobs:
 
     steps:
     - uses: browser-actions/setup-chrome@latest
+    - uses: nanasess/setup-chromedriver@master
+      with:
+        chromedriver-version: '94.0.4606.61'
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
