--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,6 +16,10 @@ jobs:
     - uses: nanasess/setup-chromedriver@master
       with:
         chromedriver-version: '94.0.4606.61'
+    - run: |
+        export DISPLAY=:99
+        chromedriver --url-base=/wd/hub &
+        sudo Xvfb -ac :99 -screen 0 1320x1080x24 > /dev/null 2>&1 & # optional
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
