--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: browser-actions/setup-chrome@stable
+    - uses: browser-actions/setup-chrome@latest
     - uses: nanasess/setup-chromedriver@master
       with:
         chromedriver-version: '94.0.4606.61'
