--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,6 +12,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: browser-actions/setup-chrome@latest
+    - uses: nanasess/setup-chromedriver@master
+      with:
+        chromedriver-version: '94.0.4606.61'
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -20,7 +24,6 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
         pip install -r requirements.txt
     - name: Lint with flake8
       run: |
@@ -29,5 +32,16 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
+      env:
+        in_ci: 1
+        phone: ${{ secrets.PHONE }}
+        password: ${{ secrets.PASSWORD }}
       run: |
-        pytest
+        mkdir ./artifact
+        pytest test_login_page.py
+    - name: Upload Test Results
+      if: always()
+      uses: actions/upload-artifact@v2
+      with:
+        name: my-artifact
+        path: artifact/
